@@ -1,5 +1,7 @@
 4.5.x
 =====
+- Make itembar not care about expanded items when panel is not full width.
+  (Jasper)
 - Separator can have different styles: space, expanded space, line (default),
   handle and old-style dotted handle. Initial patch by Landry Breuil. (Jasper)
 - Make sure tooltips are set for more than 1 clock instance (bug #3109).
